--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.51.23",
     "@vitejs/plugin-react": "^4.3.1",
     "@web3modal/wagmi": "^5.0.11",
+    "buffer": "^6.0.3",
     "circomlib": "^2.0.5",
     "circomlibjs": "^0.1.7",
     "connectkit": "^1.8.2",
